# react-rust-zcash

./: .gitignore  App.tsx  Makefile  package-lock.json  package.json
.github/workflows/: main.yml
contrib/docker/: Dockerfile  debug-android.sh  run-android.sh
modules/my-rust-module/: index.ts
modules/my-rust-module/android/: build.gradle
modules/my-rust-module/android/src/main/java/expo/modules/myrustmodule/: MyRustModule.kt
modules/my-rust-module/ios/: MyRustModule.swift
modules/my-rust-module/src/: MyRustModule.ts  MyRustModule.types.ts
native_rust_lib/: Cargo.toml
native_rust_lib/java/expo/modules/myrustmodule/: InitData.java  MyRustModule.java  SaplingInData.java  Signatures.java  TinData.java  ToutData.java  TransparentInput.java
native_rust_lib/src/: android.rs  builder.rs  deserializer.rs  error.rs  ffi.rs  init_data.rs  lib.rs  network.rs  parser.rs  signatures.rs  test.rs  transparent_input.rs  transparent_output.rs
native_rust_lib/src/android/: builder.rs  error.rs  fee.rs  init_data.rs
native_rust_lib/src/ffi/: builder.rs  c_signatures.rs  c_tinput.rs  c_toutput.rs  fee.rs  memory.rs
native_rust_lib/src/init_data/: sapling_input.rs  sapling_output.rs  transparent_input.rs  transparent_output.rs
native_rust_lib/src/test/: types.rs
native_rust_lib/test/java/expo/modules/myrustmodule/: SaplingOutData.java  TransparentOutput.java
native_rust_lib/tests/: tx_2ti_2to.json
