[package]
name = "native_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zcashtool = { git = "https://github.com/Zondax/ledger-zcash", package = "zcashtool", directory = "zcashtools/neon/native" }
jni = "0.21.1"
log = "0.4"
rand_core = "0.6.4"
snafu = { version = "0.8.2" }
zcash_primitives = { git = "https://github.com/Zondax/librustzcash", rev = "ce278848fef35903db46c3dced41658e90bbeb3c", features = [
    "transparent-inputs",
], package = "zcash_primitives" }
ledger-chain-builder = { git = "https://github.com/Zondax/ledger-zcash-tools", tag = "v2.0.0", package = "ledger-zcash-chain-builder" }
ledger-app-builder = { git = "https://github.com/Zondax/ledger-zcash-tools", tag = "v2.0.0", package = "ledger-zcash-app-builder" }

[lib]
crate-type = ["staticlib", "cdylib"]
